<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay_subject_instructions"/>

    <Button
        android:id="@+id/replay_subject_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay_subject_default"/>

    <Button
        android:id="@+id/replay_subject_sized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay_subject_create_sized"/>

    <Button
        android:id="@+id/replay_subject_timed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay_subject_create_timed"/>

</LinearLayout>